@@ -3,8 +3,8 @@ package jweblite.web.tag.page;
 import javax.servlet.jsp.JspException;
 import javax.servlet.jsp.tagext.TagSupport;
 
+import jweblite.data.provider.LoopIterator;
 import jweblite.util.StringUtils;
-import jweblite.util.iterator.LoopIterator;
 
 public class AlternatingTag extends TagSupport {
 	private static final long serialVersionUID = 1L;
